refactor dir structure, introduce DI, implement statistics
