# src/main/kotlin/model/FactStats.kt
@@ -1,0 +1,9 @@
+package com.challenge.model
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class FactStats(
+    val fact: Fact,
+    val accessCount: Int
+)
