# src/main/resources/openapi/documentation.yaml
@@ -65,6 +65,8 @@ paths:
     get:
       summary: Access statistics
       description: Provides access statistics for all cached facts.
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: Access statistics retrieved successfully
@@ -73,7 +75,26 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Statistic'
+                  $ref: '#/components/schemas/FactStats'
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+          description: The number of stats to skip before starting to collect the result set
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: The numbers of stats to return
+        - in: query
+          name: order
+          schema:
+            type: string
+            enum:
+              - ASC
+              - DESC
+          description: Sorting order
 
 components:
   schemas:
@@ -98,10 +119,14 @@ components:
           type: string
           format: uri
 
-    Statistic:
+    FactStats:
       type: object
       properties:
-        fact_id:
-          type: string
+        fact:
+          $ref: '#/components/schemas/Fact'
         access_count:
           type: integer
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
